--- a/requirements.txt
+++ b/requirements.txt
@@ -1,114 +1,5 @@
 Coverage
-altgraph==0.17.4
-appdirs==1.4.4
-asttokens==2.4.1
-attrs==23.2.0
-beautifulsoup4==4.12.3
-blinker==1.7.0
-certifi==2024.2.2
-cffi==1.16.0
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-comm==0.2.1
-contourpy==1.2.0
-cycler==0.12.1
-debugpy==1.8.0
-decorator==5.1.1
-dnspython==2.5.0
-et-xmlfile==1.1.0
-executing==2.0.1
-fastjsonschema==2.19.1
-Flask==3.0.2
-fonttools==4.48.1
-frozendict==2.4.0
-h11==0.14.0
-html5lib==1.1
-idna==3.6
-imbalanced-learn==0.12.2
-ipeadatapy==0.1.9
-ipykernel==6.29.0
-ipython==8.21.0
-itsdangerous==2.1.2
-jedi==0.19.1
-Jinja2==3.1.3
-joblib==1.4.0
-jsonschema==4.21.1
-jsonschema-specifications==2023.12.1
-jupyter_client==8.6.0
-jupyter_core==5.7.1
-keyboard==0.13.5
-kiwisolver==1.4.5
-lxml==5.1.0
-MarkupSafe==2.1.5
-matplotlib==3.8.3
-matplotlib-inline==0.1.6
-MouseInfo==0.1.3
-multitasking==0.0.11
-nbformat==5.9.2
-nest-asyncio==1.6.0
-numpy==1.26.3
-openpyxl==3.1.2
-outcome==1.3.0.post0
-packaging==23.2
-pandas==2.2.0
-pandas-datareader==0.10.0
-parso==0.8.3
-peewee==3.17.1
-pefile==2023.2.7
-pillow==10.2.0
-platformdirs==4.2.0
-plotly==5.19.0
-prompt-toolkit==3.0.43
-psutil==5.9.8
-psycopg2==2.9.9
-pure-eval==0.2.2
-PyAutoGUI==0.9.54
-pycparser==2.21
-PyGetWindow==0.0.9
-Pygments==2.17.2
-pyinstaller==6.5.0
-pyinstaller-hooks-contrib==2024.3
-pymongo==4.6.1
-PyMsgBox==1.0.9
-pyparsing==3.1.1
-pyperclip==1.8.2
-PyRect==0.2.0
-PyScreeze==0.1.30
-PySocks==1.7.1
-python-dateutil==2.8.2
-pytweening==1.2.0
-pytz==2023.4
-pywhatkit==5.4
-pywin32==306
-pywin32-ctypes==0.2.2
-pyzmq==25.1.2
-referencing==0.33.0
-requests==2.31.0
-rpds-py==0.18.0
-scikit-learn==1.4.2
-scipy==1.12.0
-seaborn==0.13.2
-selenium==4.18.1
-setuptools==69.2.0
-six==1.16.0
-sniffio==1.3.1
-sortedcontainers==2.4.0
-soupsieve==2.5
-stack-data==0.6.3
-tenacity==8.2.3
-threadpoolctl==3.4.0
-tornado==6.4
-traitlets==5.14.1
-trio==0.24.0
-trio-websocket==0.11.1
-typing_extensions==4.10.0
-tzdata==2023.4
-urllib3==2.2.1
-wcwidth==0.2.13
-webencodings==0.5.1
-Werkzeug==3.0.1
-wget==3.2
-wikipedia==1.4.0
-wsproto==1.2.0
-yfinance==0.2.37
+selenium==4.10.0
+pandas==2.0.2
+psycopg2==2.9.6
+webdriver-manager==3.8.6
