--- a/.github/workflows/pipelineRPA.yml
+++ b/.github/workflows/pipelineRPA.yml
@@ -36,11 +36,18 @@ jobs:
     - name: Relatorio
       run: coverage report
 
+    - name: Git Version
+      uses: codacy/git-version@2.4.0
+      with:
+         release-branch: main
+         prefix: teste
+          
+
     - uses: mr-smithers-excellent/docker-build-push@v6
       name: Publicando no Docker Hub
       with:
         image: murilomoreira971/rpa_python
-        tags: ${{github.run_number}}
+        tags: ${{github.run_number}}, ${{steps.version.outputs.version}}
         registry: docker.io
         dockerfile: Dockerfile
         username: ${{secrets.DOCKER_USERNAME}}
