--- a/.github/workflows/pipelineRPA.yml
+++ b/.github/workflows/pipelineRPA.yml
@@ -5,9 +5,9 @@ name: RPA Python
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "QA" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "QA" ]
 
 permissions:
   contents: read
