--- a/.github/workflows/QA.yml
+++ b/.github/workflows/QA.yml
@@ -1,1 +1,53 @@
+# This workflow will install Python dependencies, run tests and lint with a single version of Python
+# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
+name: RPA Python
+
+on:
+  push:
+    branches: [ "QA" ]
+  pull_request:
+    branches: [ "QA" ]
+
+permissions:
+  contents: read
+
+jobs:
+  build:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v3
+      with:
+        python-version: "3.10"
+
+        
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
+    - name: Teste
+      run: coverage run -m rpa_teste
+
+    - name: Relatorio
+      run: coverage report
+
+    - name: Git Version
+      id: ver
+      uses: codacy/git-version@2.4.0
+          
+
+    - uses: mr-smithers-excellent/docker-build-push@v6
+      name: Publicando no Docker Hub
+      with:
+        image: murilomoreira971/rpa_python
+        tags: ${{github.run_number}}, ${{steps.ver.outputs.version}}
+        registry: docker.io
+        dockerfile: Dockerfile
+        username: ${{secrets.DOCKER_USERNAME}}
+        password: ${{secrets.DOCKER_PASSWORD}}
+    
