--- a/.github/workflows/QA.yml
+++ b/.github/workflows/QA.yml
@@ -51,3 +51,7 @@ jobs:
         username: ${{secrets.DOCKER_USERNAME}}
         password: ${{secrets.DOCKER_PASSWORD}}
     
+
+    - name: QA
+      run: echo Estou em QA
+    
