--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
 Coverage
-selenium==4.10.0
-pandas==2.0.2
-psycopg2==2.9.6
-webdriver-manager==3.8.6
-numpy==1.24.3
+selenium
+psycopg2
+webdriver-manager
